added pages table prop to script & updated html with for loop

--- a/frontend/src/app/pages/menu/menu.page.html
+++ b/frontend/src/app/pages/menu/menu.page.html
@@ -7,11 +7,11 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
+        <ion-menu-toggle *ngFor="let page of pages">
+          <ion-item>
+            {{ page.title }}
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
