--- a/frontend/src/app/pages/menu/menu.page.html
+++ b/frontend/src/app/pages/menu/menu.page.html
@@ -7,7 +7,7 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-menu-toggle *ngFor="let page of pages">
+        <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
           <ion-item>
             {{ page.title }}
           </ion-item>
