added router event + selectedPath props to menu + updated html

--- a/frontend/src/app/pages/menu/menu.page.html
+++ b/frontend/src/app/pages/menu/menu.page.html
@@ -8,7 +8,7 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
-          <ion-item>
+          <ion-item [routerLink]="page.url" routerDirection="root">
             {{ page.title }}
           </ion-item>
         </ion-menu-toggle>
