--- a/frontend/src/app/pages/menu/menu.page.html
+++ b/frontend/src/app/pages/menu/menu.page.html
@@ -1,4 +1,4 @@
-<ion-split-pane>
+<ion-split-pane when="md" contentId="content">
   <ion-menu contentId="content">
     <ion-header>
       <ion-toolbar>
