--- a/frontend/src/app/pages/user/user.page.html
+++ b/frontend/src/app/pages/user/user.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>user</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-menu-toggle>
+      <ion-title>user</ion-title>
+    </ion-menu-toggle>
   </ion-toolbar>
 </ion-header>
 
