--- a/frontend/src/app/pages/menu/menu.page.scss
+++ b/frontend/src/app/pages/menu/menu.page.scss
@@ -1,3 +1,9 @@
-.active-menu-item {
-    border-left: 5px solid var(--ion-color-primary);
+ion-item {
+    --border-style: none none none solid;
+    --border-width: 5px;
+    --border-color: var(--ion-color-primary-contrast)
+}
+
+ion-item.active-menu-item {
+    --border-color: var(--ion-color-primary);
 }
