setting up side menu accepted width

--- a/frontend/src/app/pages/menu/menu.page.scss
+++ b/frontend/src/app/pages/menu/menu.page.scss
@@ -1,3 +1,12 @@
+ion-split-pane {
+    --side-max-width: 250px;
+    --side-min-width: 200px;
+}
+
+ion-split-pane ion-toolbar {
+    --border-style: none;
+}
+
 ion-item {
     --border-style: none none none solid;
     --border-width: 5px;
