updated ion-label color for active and inactive menu item

--- a/frontend/src/app/pages/menu/menu.page.scss
+++ b/frontend/src/app/pages/menu/menu.page.scss
@@ -26,3 +26,11 @@ ion-item.active-menu-item ion-icon {
     color: var(--ion-color-primary);
     font-size: 32px;
 }
+
+ion-item ion-label {
+    color: var(--ion-text-color);
+}
+
+ion-item.active-menu-item ion-label {
+    color: var(--ion-color-primary);
+}
