hide event details section underneath calendar widget

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -12,6 +12,7 @@
   <calendar
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
-    [currentDate]="calendar.currentDate">
+    [currentDate]="calendar.currentDate"
+    [showEventDetail]="false">
   </calendar>
 </ion-content>
