added option to lock swipes

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -13,6 +13,7 @@
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
-    [showEventDetail]="false">
+    [showEventDetail]="false"
+    [lockSwipes]="true">
   </calendar>
 </ion-content>
