bugfix: cannot swipe dynamically - blocked only touch gesture

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -29,6 +29,6 @@
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
     [showEventDetail]="false"
-    [lockSwipes]="true">
+    [sliderOptions]="{ allowTouchMove: false }">
   </calendar>
 </ion-content>
