--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -7,17 +7,17 @@
       <ion-title>calendar</ion-title>
     </ion-menu-toggle>
     <ion-row>
-      <ion-col offset="3" size="2">
+      <ion-col offset="4" size="1">
         <ion-button (click)="previousMonth()">
-          <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+          <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
       <ion-col size="2">
-        <ion-label>MONTH</ion-label>
+        <ion-label>{{ titleMonth }}</ion-label>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="1">
         <ion-button (click)="nextMonth()">
-          <ion-icon name="arrow-front" slot="icon-only"></ion-icon>
+          <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
