--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -29,6 +29,7 @@
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
     [showEventDetail]="false"
-    [sliderOptions]="{ allowTouchMove: false }">
+    [sliderOptions]="{ allowTouchMove: false }"
+    (onTitleChanged)="onMonthChanged($event)">
   </calendar>
 </ion-content>
