--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -6,21 +6,23 @@
     <ion-menu-toggle>
       <ion-title>calendar</ion-title>
     </ion-menu-toggle>
-    <ion-row>
-      <ion-col offset="4" size="1">
-        <ion-button (click)="previousMonth()">
-          <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-      <ion-col size="2">
-        <ion-label>{{ titleMonth }}</ion-label>
-      </ion-col>
-      <ion-col size="1">
-        <ion-button (click)="nextMonth()">
-          <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="1" class="ion-no-padding ion-no-margin">
+          <ion-button (click)="previousMonth()">
+            <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="2" class="ion-no-padding">
+          <ion-label>{{ titleMonth }}</ion-label>
+        </ion-col>
+        <ion-col size="1" class="ion-no-padding ion-no-margin">
+          <ion-button (click)="nextMonth()">
+            <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 <ion-content>
