--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -3,14 +3,11 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-menu-toggle>
-      <ion-title>calendar</ion-title>
-    </ion-menu-toggle>
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size="4"></ion-col>
         <ion-col size="1" class="ion-no-padding ion-no-margin">
-          <ion-button class="ion-float-right" (click)="previousMonth()">
+          <ion-button fill="clear" class="ion-float-right" (click)="previousMonth()">
             <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-col>
@@ -18,7 +15,7 @@
           <ion-label>{{ titleMonth }}</ion-label>
         </ion-col>
         <ion-col size="1" class="ion-no-padding ion-no-margin">
-          <ion-button class="ion-float-left" (click)="nextMonth()">
+          <ion-button fill="clear" class="ion-float-left" (click)="nextMonth()">
             <ion-icon name="chevron-forward-outline" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-col>
