bugfix: sudden resize causes calendar ui break

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -5,7 +5,11 @@ $headerHeight:56px;
 
     .table-bordered {
         height: calc(#{$fullViewHeight} - #{$headerHeight}) !important;
-        max-height:100vh;
+        max-height: calc(#{$fullViewHeight} - #{$headerHeight});
+    }
+
+    .swiper-slide-active {
+        width: 100% !important;
     }
 
 }
