bugfix: calendar height is incorrect when switching months

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -29,7 +29,7 @@
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
     [showEventDetail]="false"
-    [sliderOptions]="{ allowTouchMove: false }"
+    [sliderOptions]="{ allowTouchMove: false, speed: 10 }"
     (onTitleChanged)="onMonthChanged($event)">
   </calendar>
 </ion-content>
