--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -5,13 +5,14 @@
     </ion-buttons>
     <ion-grid class="ion-no-padding">
       <ion-row>
-        <ion-col size="4"></ion-col>
+        <ion-col size="2"></ion-col>
+        <ion-col size="2" class="ion-hide-md-down"></ion-col>
         <ion-col size="1" class="ion-no-padding ion-no-margin">
           <ion-button fill="clear" class="ion-float-right" (click)="previousMonth()">
             <ion-icon name="chevron-back-outline" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-col>
-        <ion-col size="2" class="ion-no-padding ion-text-center ion-align-self-center">
+        <ion-col size="4" size-md="2" class="ion-no-padding ion-text-center ion-align-self-center">
           <ion-label>{{ titleMonth }}</ion-label>
         </ion-col>
         <ion-col size="1" class="ion-no-padding ion-no-margin">
