updated current and selected day visuals: background and text colors

--- a/frontend/src/app/pages/calendar/calendar.page.scss
+++ b/frontend/src/app/pages/calendar/calendar.page.scss
@@ -12,4 +12,14 @@ $headerHeight:56px;
         width: 100% !important;
     }
 
+    .monthview-current {
+        background-color: var(--ion-color-primary) !important ;
+        color: var(--ion-color-primary-contrast) !important;
+    }
+
+    .monthview-selected {
+        background-color: rgb(231, 226, 226) !important;
+        color: black !important;
+    }
+
 }
