added method used when selecting a date/time in calendar

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -36,6 +36,7 @@
     [currentDate]="calendar.currentDate"
     [showEventDetail]="false"
     [sliderOptions]="{ allowTouchMove: false, speed: 10 }"
-    (onTitleChanged)="onMonthChanged($event)">
+    (onTitleChanged)="onMonthChanged($event)"
+    (onTimeSelected)="onTimeSelected($event)">
   </calendar>
 </ion-content>
