bugfix: disabled auto selection so method is not auto triggered

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -35,6 +35,7 @@
     [calendarMode]="calendar.mode"
     [currentDate]="calendar.currentDate"
     [showEventDetail]="false"
+    [autoSelect]="false"
     [sliderOptions]="{ allowTouchMove: false, speed: 10 }"
     (onTitleChanged)="onMonthChanged($event)"
     (onTimeSelected)="onTimeSelected($event)">
