used current day event in title bar + added center and padding class

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>event</ion-title>
+  <ion-toolbar class="ion-no-padding ion-text-center ion-align-self-center">
+    <ion-title>Events on {{ dayTime | date }}</ion-title> 
   </ion-toolbar>
 </ion-header>
 
