added modal close method and update GUI with exit icon

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar class="ion-no-padding ion-text-center ion-align-self-center">
-    <ion-title>Events on {{ dayTime | date }}</ion-title> 
+    <ion-buttons slot="end" (click)="close()">
+      <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
+    </ion-buttons>
+    <ion-title>Events on {{ dayTime | date }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
