--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar class="ion-no-padding ion-text-center ion-align-self-center">
-    <ion-buttons slot="end" (click)="close()">
+    <ion-button fill="clear" slot="end" (click)="close()">
       <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
-    </ion-buttons>
+    </ion-button>
     <ion-title>Events on {{ dayTime | date }}</ion-title>
   </ion-toolbar>
 </ion-header>
