--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -6,7 +6,33 @@
     <ion-title>Events on {{ dayTime | date }}</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-card>
+    <ion-list-header lines="inset">
+      <ion-label>Todays events</ion-label>
+      <ion-button fill="outline" size="small" color="danger">Clear all</ion-button>
+    </ion-list-header>
+    <ion-list>
+      <ion-item>
+        <ion-icon name="american-football-outline"></ion-icon>
+        <ion-label>Test event 1 title</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="bicycle-outline"></ion-icon>
+        <ion-label>Test event 2 title</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="earth-outline"></ion-icon>
+        <ion-label>Test event 3 title</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="game-controller-outline"></ion-icon>
+        <ion-label>Test event 4 title</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="school-outline"></ion-icon>
+        <ion-label>Test event 5 title</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
