--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -18,7 +18,7 @@
         <ion-label>{{ event.title }}</ion-label>
       </ion-item>
       <ion-item class="empty-events-list" lines="none" *ngIf="dayEvents.length <= 0 || !dayEvents">
-        <ion-label>NO EVENTS</ion-label>
+        <ion-label class="ion-text-center ">no events</ion-label>
       </ion-item>
     </ion-list>
   </ion-card>
