--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -24,4 +24,9 @@
       </ion-item>
     </ion-list>
   </ion-card>
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
