showing add action button only for small screen sizes

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -24,7 +24,7 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+  <ion-fab class="ion-hide-md-up" horizontal="end" vertical="bottom" slot="fixed">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
