added margin to fab (right and bottom) to separate it from card

--- a/frontend/src/app/dialogs/event/event.page.scss
+++ b/frontend/src/app/dialogs/event/event.page.scss
@@ -37,4 +37,9 @@ ion-content {
     ion-item.empty-events-list {
         --color: gray;
     }
+
+    ion-fab {
+        margin-right: 5px;
+        margin-bottom: 5px;
+    }
 }
