--- a/frontend/src/app/components/add-event/add-event.component.html
+++ b/frontend/src/app/components/add-event/add-event.component.html
@@ -1,3 +1,16 @@
-<p>
-  add-event works!
-</p>
+<ion-fab class="ion-hide-md-up" horizontal="end" vertical="bottom" slot="fixed">
+  <ion-fab-button>
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list side="start">
+    <ion-fab-button color="medium">
+      <ion-icon name="calendar"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button color="medium">
+      <ion-icon name="checkbox"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button color="medium">
+      <ion-icon name="cart"></ion-icon>
+    </ion-fab-button>
+  </ion-fab-list>
+</ion-fab>
