updated event and calendar html with new add-event component

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -7,6 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <add-event></add-event>
   <ion-card>
     <ion-list-header lines="inset">
       <ion-label>Todays events</ion-label>
@@ -24,20 +25,4 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-fab class="ion-hide-md-up" horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button color="medium">
-        <ion-icon name="calendar"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button color="medium">
-        <ion-icon name="checkbox"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button color="medium">
-        <ion-icon name="cart"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
 </ion-content>
