--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -40,4 +40,5 @@
     (onTitleChanged)="onMonthChanged($event)"
     (onTimeSelected)="onTimeSelected($event)">
   </calendar>
+  <add-event></add-event>
 </ion-content>
