moved ion-hide class outside add event component

--- a/frontend/src/app/components/add-event/add-event.component.html
+++ b/frontend/src/app/components/add-event/add-event.component.html
@@ -1,4 +1,4 @@
-<ion-fab class="ion-hide-md-up" horizontal="end" vertical="bottom" slot="fixed">
+<ion-fab horizontal="end" vertical="bottom" slot="fixed">
   <ion-fab-button>
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
