--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <add-event></add-event>
+  <add-event class="ion-hide-md-up"></add-event>
   <ion-card>
     <ion-list-header lines="inset">
       <ion-label>Todays events</ion-label>
