--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -18,7 +18,10 @@
     <ion-list>
       <ion-item class="event-item" *ngFor="let event of dayEvents">
         <ion-icon name="{{ event.icon }}"></ion-icon>
-        <ion-label>{{ event.title }}</ion-label>
+        <ion-label class="ion-text-left">{{ event.title }}</ion-label>
+        <ion-label class="ion-text-right event-info">
+          {{ event.occurence.start | date:'hh:mm' }} - {{ event.occurence.stop | date:'hh:mm' }}
+        </ion-label>
       </ion-item>
       <ion-item class="empty-events-list" lines="none" *ngIf="dayEvents.length <= 0 || !dayEvents">
         <ion-label class="ion-text-center ">no events</ion-label>
