--- a/frontend/src/app/dialogs/event/event.page.scss
+++ b/frontend/src/app/dialogs/event/event.page.scss
@@ -37,4 +37,9 @@ ion-content {
     ion-item.empty-events-list {
         --color: gray;
     }
+
+    ion-label.event-info {
+        --color: gray;
+        font-size: 14px;
+    }
 }
