code cleanup, refactor & adjustments (updated event element height)

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="ion-no-padding ion-text-center ion-align-self-center">
-    <ion-button fill="clear" slot="end" (click)="close()">
+    <ion-button fill="clear" slot="end" (click)="closeDialog()">
       <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
     </ion-button>
     <ion-title>Events on {{ dayTime | date }}</ion-title>
