added css classes & switch after toggle press

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -16,7 +16,7 @@
       </ion-button>
     </ion-list-header>
     <ion-list *ngFor="let event of dayEvents; let i = index;">
-      <ion-item class="event-item" tappable (click)="toggleEventInfo(i)">
+      <ion-item tappable (click)="toggleEventInfo(i)" [ngClass]="{'event-detail':isEventOpened(i), 'event-item':!isEventOpened(i)}">
         <ion-icon name="{{ event.icon }}"></ion-icon>
         <ion-label class="ion-text-left">{{ event.title }}</ion-label>
         <ion-label class="ion-text-right event-info">
