--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -16,9 +16,9 @@
       </ion-button>
     </ion-list-header>
     <ion-list *ngFor="let event of dayEvents; let i = index;">
-      <ion-item tappable (click)="toggleEventInfo(i)" [ngClass]="{'event-detail':isEventOpened(i), 'event-item':!isEventOpened(i)}">
-        <ion-icon slot="start" name="chevron-forward-outline" class="ion-no-margin" *ngIf="!isEventOpened(i)"></ion-icon>
-        <ion-icon slot="start" name="chevron-down-outline" class="ion-no-margin" *ngIf="isEventOpened(i)"></ion-icon>
+      <ion-item tappable (click)="toggleDetails(i)" [ngClass]="{'event-detail':isDetailed(i), 'event-item':!isDetailed(i)}">
+        <ion-icon slot="start" name="chevron-forward-outline" class="ion-no-margin" *ngIf="!isDetailed(i)"></ion-icon>
+        <ion-icon slot="start" name="chevron-down-outline" class="ion-no-margin" *ngIf="isDetailed(i)"></ion-icon>
         <ion-icon name="{{ event.icon }}"></ion-icon>
         <ion-label class="ion-text-left">{{ event.title }}</ion-label>
         <ion-label class="ion-text-right event-info">
