--- a/frontend/src/app/dialogs/event/event.page.scss
+++ b/frontend/src/app/dialogs/event/event.page.scss
@@ -36,7 +36,7 @@ ion-content {
     }
 
     ion-item.event-detail {
-        --background: green;
+        --background: var(--ion-color-primary-contrast);
         height: 50px;
     }
 
