--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -15,7 +15,7 @@
         Clear all
       </ion-button>
     </ion-list-header>
-    <ion-list *ngFor="let event of dayEvents; let i = index;" lines="full">
+    <ion-list *ngFor="let event of dayEvents; let i = index;" lines="full" detail="false">
       <ion-item tappable (click)="toggleDetails(i)" [ngClass]="{'event-detail':isDetailed(i), 'event-item':!isDetailed(i)}">
         <ion-icon slot="start" name="chevron-forward-outline" class="ion-no-margin" *ngIf="!isDetailed(i)"></ion-icon>
         <ion-icon slot="start" name="chevron-down-outline" class="ion-no-margin" *ngIf="isDetailed(i)"></ion-icon>
@@ -25,7 +25,7 @@
           {{ event.occurence.start | date:'hh:mm' }} - {{ event.occurence.stop | date:'hh:mm' }}
         </ion-label>
       </ion-item>
-      <ion-item *ngIf="isDetailed(i)" text-wrap>
+      <ion-item *ngIf="isDetailed(i)" text-wrap detail="false">
         <ion-grid>
           <ion-row no-padding align-items-center>
             <ion-col size="3" class="column-title">
