updated label position from stacked to floating

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -30,15 +30,15 @@
           <ion-row align-items-center>
             <ion-col class="column-content">
               <ion-item>
-                <ion-label position="stacked">category</ion-label>
+                <ion-label position="floating">category</ion-label>
                 <ion-input class="ion-text-left" value="{{ event.category }}"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="stacked">owner</ion-label>
+                <ion-label position="floating">owner</ion-label>
                 <ion-input class="ion-text-left" value="{{ event.owner }}"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="stacked">content</ion-label>
+                <ion-label position="floating">content</ion-label>
                 <ion-input class="ion-text-left" value="{{ event.content }}"></ion-input>
               </ion-item>
             </ion-col>
