--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -39,7 +39,7 @@
               </ion-item>
               <ion-item>
                 <ion-label position="floating">content</ion-label>
-                <ion-input class="ion-text-left" value="{{ event.content }}"></ion-input>
+                <ion-textarea class="ion-text-left" value="{{ event.content }}"></ion-textarea>
               </ion-item>
             </ion-col>
           </ion-row>
