removed unnecessary ion-text-left class from event details

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -31,15 +31,15 @@
             <ion-col class="column-content">
               <ion-item>
                 <ion-label position="floating">category</ion-label>
-                <ion-input class="ion-text-left" value="{{ event.category }}"></ion-input>
+                <ion-input value="{{ event.category }}"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">owner</ion-label>
-                <ion-input class="ion-text-left" value="{{ event.owner }}"></ion-input>
+                <ion-input value="{{ event.owner }}"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">content</ion-label>
-                <ion-textarea class="ion-text-left" value="{{ event.content }}"></ion-textarea>
+                <ion-textarea value="{{ event.content }}"></ion-textarea>
               </ion-item>
             </ion-col>
           </ion-row>
