--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -39,7 +39,7 @@
               </ion-item>
               <ion-item>
                 <ion-label position="floating">content</ion-label>
-                <ion-textarea value="{{ event.content }}"></ion-textarea>
+                <ion-textarea rows="4" cols="20" value="{{ event.content }}"></ion-textarea>
               </ion-item>
             </ion-col>
           </ion-row>
