--- a/frontend/src/app/dialogs/event/event.page.scss
+++ b/frontend/src/app/dialogs/event/event.page.scss
@@ -24,6 +24,12 @@ ion-content {
     ion-card {
         margin: #{$marginValue};
         height: calc(100% - 2*#{$marginValue});
+        overflow-y: scroll;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent;
     }
 
     ion-item ion-icon {
