added right side padding to clear events button

--- a/frontend/src/app/dialogs/event/event.page.scss
+++ b/frontend/src/app/dialogs/event/event.page.scss
@@ -32,6 +32,10 @@ ion-content {
         background: transparent;
     }
 
+    ion-list-header ion-button {
+        padding-right: 10px;
+    }
+
     ion-item ion-icon {
         padding-right: 10px;
     }
