--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -39,7 +39,11 @@
               </ion-item>
               <ion-item>
                 <ion-label position="floating">owner</ion-label>
-                <ion-input value="{{ event.owner }}"></ion-input>
+                <ion-select value="{{ event.owner }}">
+                  <ion-select-option *ngFor="let user of availableUsers;" value="{{ user }}">
+                    {{ user }}
+                  </ion-select-option>
+                </ion-select>
               </ion-item>
               <ion-item>
                 <ion-label position="floating">content</ion-label>
