used category model class in events list + updated UI

--- a/frontend/src/app/dialogs/event/event.page.html
+++ b/frontend/src/app/dialogs/event/event.page.html
@@ -32,8 +32,8 @@
               <ion-item>
                 <ion-label position="floating">category</ion-label>
                 <ion-select value="{{ event.category }}">
-                  <ion-select-option *ngFor="let category of availableCategories;" value="{{ category }}">
-                    {{ category }}
+                  <ion-select-option *ngFor="let category of availableCategories;" value="{{ category.name }}">
+                    {{ category.name }}
                   </ion-select-option>
                 </ion-select>
               </ion-item>
