updated add-event-btn import paths in daily events classes

--- a/frontend/src/app/dialogs/day-events/day-events.page.html
+++ b/frontend/src/app/dialogs/day-events/day-events.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <add-event class="ion-hide-md-up"></add-event>
+  <add-event-btn class="ion-hide-md-up"></add-event-btn>
   <ion-card>
     <ion-list-header lines="full">
       <ion-label>Todays events</ion-label>
