updated add-event-btn import paths in calendar class & html

--- a/frontend/src/app/pages/calendar/calendar.page.html
+++ b/frontend/src/app/pages/calendar/calendar.page.html
@@ -40,5 +40,5 @@
     (onTitleChanged)="onMonthChanged($event)"
     (onTimeSelected)="onTimeSelected($event)">
   </calendar>
-  <add-event></add-event>
+  <add-event-btn></add-event-btn>
 </ion-content>
