--- a/frontend/src/app/components/add-event-btn/add-event-btn.component.html
+++ b/frontend/src/app/components/add-event-btn/add-event-btn.component.html
@@ -3,7 +3,7 @@
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
   <ion-fab-list side="start">
-    <ion-fab-button [color]="getTextEventState()" (click)="openNewTextEventDialog()">
+    <ion-fab-button [class]="getTextEventState() ? 'online-service' : 'offline-service'" (click)="openNewTextEventDialog()">
       <ion-icon name="calendar"></ion-icon>
     </ion-fab-button>
     <ion-fab-button color="medium">
