--- a/frontend/src/app/components/add-event-btn/add-event-btn.component.html
+++ b/frontend/src/app/components/add-event-btn/add-event-btn.component.html
@@ -6,10 +6,10 @@
     <ion-fab-button [class]="getTextEventState() ? 'online-service' : 'offline-service'" (click)="openNewTextEventDialog()">
       <ion-icon name="calendar"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button color="medium">
+    <ion-fab-button [class]="getTodoEventState() ? 'online-service' : 'offline-service'" (click)="openNewTodoEventDialog()">
       <ion-icon name="checkbox"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button color="medium">
+    <ion-fab-button [class]="getShopEventState() ? 'online-service' : 'offline-service'" (click)="openNewShopEventDialog()">
       <ion-icon name="cart"></ion-icon>
     </ion-fab-button>
   </ion-fab-list>
