--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -6,7 +6,27 @@
     <ion-title>add-text-event</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-grid>
+    <ion-row align-items-center>
+      <ion-col class="column-content">
+        <ion-item>
+          <ion-label position="floating">category</ion-label>
+          <ion-select value="">
+            <ion-select-option *ngFor="let category of availableCategories;" value="{{ category.name }}">
+              {{ category.name }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">owner</ion-label>
+          <ion-select value="">
+            <ion-select-option *ngFor="let user of availableUsers;" value="{{ user }}">
+              {{ user }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
