added accept and cancel buttons to add text event dialog

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -34,6 +34,8 @@
           <ion-label position="floating">content</ion-label>
           <ion-textarea rows="5" cols="20" value=""></ion-textarea>
         </ion-item>
+        <ion-button color="primary">ADD</ion-button>
+        <ion-button color="danger" (click)="closeDialog()">CANCEL</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
