added icon selector mockup (to be moved as a separate component)

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -30,6 +30,16 @@
             </ion-select-option>
           </ion-select>
         </ion-item>
+        <ion-item lines="full">
+          <ion-thumbnail slot="start">
+            <ion-icon class="icon-thumb" name="beer"></ion-icon>
+          </ion-thumbnail>
+          <ion-label>
+            <h5>selected:</h5>
+            <p>accessibility-outline</p>
+          </ion-label>
+          <ion-button fill="outline" slot="end">change</ion-button>
+        </ion-item>
         <ion-item>
           <ion-label position="floating">content</ion-label>
           <ion-textarea rows="5" cols="20" value=""></ion-textarea>
