--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -38,6 +38,7 @@
           </ion-label>
           <ion-button fill="outline" slot="end">change</ion-button>
         </ion-item>
+        <icon-selector></icon-selector>
         <ion-item>
           <ion-label position="floating">content</ion-label>
           <ion-textarea rows="5" cols="20" value=""></ion-textarea>
