--- a/frontend/src/app/components/icon-selector/icon-selector.component.html
+++ b/frontend/src/app/components/icon-selector/icon-selector.component.html
@@ -1,3 +1,10 @@
-<p>
-  icon-selector works!
-</p>
+<ion-item lines="full">
+  <ion-thumbnail slot="start">
+    <ion-icon class="icon-thumb" name="beer"></ion-icon>
+  </ion-thumbnail>
+  <ion-label>
+    <h5>selected:</h5>
+    <p>accessibility-outline</p>
+  </ion-label>
+  <ion-button fill="outline" slot="end">change</ion-button>
+</ion-item>
