--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -3,7 +3,7 @@
     <ion-button fill="clear" slot="end" (click)="closeDialog()">
       <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
     </ion-button>
-    <ion-title>add-text-event</ion-title>
+    <ion-title>add text event</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -33,8 +33,8 @@
           <ion-label position="floating">content</ion-label>
           <ion-textarea rows="5" cols="20" value=""></ion-textarea>
         </ion-item>
-        <ion-button color="primary">ADD</ion-button>
-        <ion-button color="danger" (click)="closeDialog()">CANCEL</ion-button>
+        <ion-button color="primary" class="ion-text-lowercase">add</ion-button>
+        <ion-button color="danger" class="ion-text-lowercase" (click)="closeDialog()">cancel</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
