added mockup addEvent method and connected it to HTML

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -33,7 +33,7 @@
           <ion-label position="floating">content</ion-label>
           <ion-textarea rows="5" cols="20" value=""></ion-textarea>
         </ion-item>
-        <ion-button color="primary" class="ion-text-lowercase">add</ion-button>
+        <ion-button color="primary" class="ion-text-lowercase" (click)="addEvent()">add</ion-button>
         <ion-button color="danger" class="ion-text-lowercase" (click)="closeDialog()">cancel</ion-button>
       </ion-col>
     </ion-row>
