added start and end dates fields

--- a/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
+++ b/frontend/src/app/dialogs/add-text-event/add-text-event.page.html
@@ -33,7 +33,15 @@
         <icon-selector class="bottom-space"></icon-selector>
         <ion-item class="bottom-space">
           <ion-label position="floating">content</ion-label>
-          <ion-textarea rows="5" cols="20" value=""></ion-textarea>
+          <ion-textarea rows="4" cols="20" value=""></ion-textarea>
+        </ion-item>
+        <ion-item>
+          <ion-label>start date</ion-label>
+          <ion-datetime displayFormat="D MMM YYYY - H:mm" min="2020" max="2050" value="2021-08-07T19:00Z"></ion-datetime>
+        </ion-item>
+        <ion-item>
+          <ion-label>end date</ion-label>
+          <ion-datetime displayFormat="D MMM YYYY - H:mm" min="2020" max="2050" value="2021-08-07T19:30Z"></ion-datetime>
         </ion-item>
         <ion-grid>
           <ion-row align-items-center>
